--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iqbal Shaikh | Data Analyst</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     html { scroll-behavior: smooth; }
+    body { font-family: 'Segoe UI', sans-serif; }
   </style>
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="bg-gradient-to-tr from-sky-50 via-blue-100 to-sky-50 text-gray-800">
 
   <!-- Navbar -->
-  <header class="fixed top-0 left-0 w-full bg-white shadow z-50">
-    <nav class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
-      <div class="text-xl font-bold">Iqbal Shaikh</div>
-      <div class="space-x-6">
-        <a href="#home" class="hover:text-blue-600">Home</a>
-        <a href="#about" class="hover:text-blue-600">About</a>
-        <a href="#projects" class="hover:text-blue-600">Projects</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
+  <header class="fixed top-0 left-0 w-full bg-white/70 backdrop-blur shadow z-50">
+    <nav class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+      <div class="text-2xl font-extrabold text-blue-600">Iqbal Shaikh</div>
+      <div class="space-x-6 font-medium text-sm">
+        <a href="#home" class="hover:text-blue-600 transition">Home</a>
+        <a href="#about" class="hover:text-blue-600 transition">About</a>
+        <a href="#projects" class="hover:text-blue-600 transition">Projects</a>
+        <a href="#contact" class="hover:text-blue-600 transition">Contact</a>
       </div>
     </nav>
   </header>
@@ -28,44 +30,54 @@
   <main class="pt-24">
 
     <!-- Home Section -->
-    <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center bg-gray-100 px-6">
-      <h1 class="text-4xl font-bold mb-4">Hi, I'm Iqbal Shaikh</h1>
-      <p class="text-xl">Data Analyst • Data Enthusiast</p>
+    <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center px-6">
+      <h1 class="text-5xl font-extrabold text-blue-800 mb-4 animate-pulse">Hi, I'm Iqbal Shaikh</h1>
+      <p class="text-xl text-gray-700">Data Analyst • Data Enthusiast</p>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-16 px-6 max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-4">About Me</h2>
-      <p class="text-gray-700 text-lg">
+    <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-semibold mb-6 text-blue-700">About Me</h2>
+      <p class="text-lg text-gray-700 leading-relaxed">
         I'm a passionate Data Analyst with a strong interest in uncovering insights from data and helping businesses make data-driven decisions.
       </p>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="bg-gray-100 py-16 px-6">
+    <section id="projects" class="bg-white py-20 px-6">
       <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-3xl font-semibold mb-8">Projects</h2>
-        <div class="bg-white shadow rounded p-6 mb-4">
-          <h3 class="text-xl font-bold mb-2">Blog Website</h3>
+        <h2 class="text-3xl font-semibold mb-10 text-blue-700">Projects</h2>
+        <div class="bg-blue-50 shadow-md hover:shadow-xl transition rounded-xl p-6 mb-4">
+          <h3 class="text-xl font-bold text-gray-800 mb-2">Blog Website</h3>
           <p class="text-gray-600">A simple blog site created using modern web tools.</p>
         </div>
       </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-16 px-6 max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6">Contact</h2>
-      <p class="mb-4">Feel free to reach out to me via email or connect on social media!</p>
-      <p class="text-blue-600">
-        <a href="mailto:shaikhiqbal10062003@gmail.com">shaikhiqbal10062003@gmail.com</a>
+    <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-semibold mb-6 text-blue-700">Contact</h2>
+      <p class="mb-4 text-gray-700">Feel free to reach out or connect!</p>
+      <p class="text-blue-600 mb-4">
+        <i class="fas fa-envelope mr-2"></i>
+        <a href="mailto:shaikhiqbal10062003@gmail.com" class="hover:underline">shaikhiqbal10062003@gmail.com</a>
       </p>
-      <div class="mt-4 space-x-4">
-        <a href="https://www.linkedin.com/in/iqbal-shaikh-5bb5702a9" target="_blank" class="text-blue-500 hover:underline">LinkedIn</a>
-        <a href="https://github.com/Iqbal-Shaikhh" target="_blank" class="text-gray-800 hover:underline">GitHub</a>
+      <div class="flex justify-center space-x-6 text-2xl">
+        <a href="https://www.linkedin.com/in/iqbal-shaikh-5bb5702a9" target="_blank" class="text-blue-700 hover:text-blue-900">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/Iqbal-Shaikhh" target="_blank" class="text-gray-800 hover:text-black">
+          <i class="fab fa-github"></i>
+        </a>
       </div>
     </section>
 
   </main>
+
+  <!-- Footer -->
+  <footer class="bg-white text-center py-4 border-t text-sm text-gray-500">
+    © 2025 Iqbal Shaikh. All rights reserved.
+  </footer>
 
 </body>
 </html>
