--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="space-x-6 font-medium text-sm">
         <a href="#home" class="hover:text-blue-600 transition">Home</a>
         <a href="#about" class="hover:text-blue-600 transition">About</a>
+        <a href="#skills" class="hover:text-blue-600 transition">Skills</a>
         <a href="#projects" class="hover:text-blue-600 transition">Projects</a>
         <a href="#contact" class="hover:text-blue-600 transition">Contact</a>
       </div>
@@ -41,6 +42,23 @@
       <p class="text-lg text-gray-700 leading-relaxed">
         I'm a passionate Data Analyst with a strong interest in uncovering insights from data and helping businesses make data-driven decisions.
       </p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="py-20 px-6 bg-blue-50">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-3xl font-semibold mb-6 text-blue-700">Skills</h2>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+          <span class="bg-white py-2 px-4 rounded shadow">Python</span>
+          <span class="bg-white py-2 px-4 rounded shadow">SQL</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Excel</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Power BI</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Tableau</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Data Cleaning</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Visualization</span>
+          <span class="bg-white py-2 px-4 rounded shadow">Git/GitHub</span>
+        </div>
+      </div>
     </section>
 
     <!-- Projects Section -->
