--- a/index.html
+++ b/index.html
@@ -5,24 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iqbal Shaikh | Data Analyst</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class'
+    }
+  </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     html { scroll-behavior: smooth; }
     body { font-family: 'Segoe UI', sans-serif; }
   </style>
 </head>
-<body class="bg-gradient-to-tr from-sky-50 via-blue-100 to-sky-50 text-gray-800">
+<body class="bg-gradient-to-tr from-sky-50 via-blue-100 to-sky-50 text-gray-800 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 dark:text-gray-200">
+
+  <!-- Dark Mode Toggle -->
+  <div class="fixed top-4 right-4 z-50">
+    <button onclick="document.documentElement.classList.toggle('dark')" class="bg-gray-200 dark:bg-gray-700 p-2 rounded-full shadow-md">
+      <i class="fas fa-moon dark:hidden"></i>
+      <i class="fas fa-sun hidden dark:inline"></i>
+    </button>
+  </div>
 
   <!-- Navbar -->
-  <header class="fixed top-0 left-0 w-full bg-white/70 backdrop-blur shadow z-50">
+  <header class="fixed top-0 left-0 w-full bg-white/70 dark:bg-gray-800/70 backdrop-blur shadow z-40">
     <nav class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-      <div class="text-2xl font-extrabold text-blue-600">Iqbal Shaikh</div>
+      <div class="text-2xl font-extrabold text-blue-600 dark:text-blue-400">Iqbal Shaikh</div>
       <div class="space-x-6 font-medium text-sm">
-        <a href="#home" class="hover:text-blue-600 transition">Home</a>
-        <a href="#about" class="hover:text-blue-600 transition">About</a>
-        <a href="#skills" class="hover:text-blue-600 transition">Skills</a>
-        <a href="#projects" class="hover:text-blue-600 transition">Projects</a>
-        <a href="#contact" class="hover:text-blue-600 transition">Contact</a>
+        <a href="#home" class="hover:text-blue-600 dark:hover:text-blue-300 transition">Home</a>
+        <a href="#about" class="hover:text-blue-600 dark:hover:text-blue-300 transition">About</a>
+        <a href="#skills" class="hover:text-blue-600 dark:hover:text-blue-300 transition">Skills</a>
+        <a href="#projects" class="hover:text-blue-600 dark:hover:text-blue-300 transition">Projects</a>
+        <a href="#contact" class="hover:text-blue-600 dark:hover:text-blue-300 transition">Contact</a>
       </div>
     </nav>
   </header>
@@ -32,59 +45,59 @@
 
     <!-- Home Section -->
     <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center px-6">
-      <h1 class="text-5xl font-extrabold text-blue-800 mb-4 animate-pulse">Hi, I'm Iqbal Shaikh</h1>
-      <p class="text-xl text-gray-700">Data Analyst • Data Enthusiast</p>
+      <h1 class="text-5xl font-extrabold text-blue-800 dark:text-blue-300 mb-4 animate-pulse">Hi, I'm Iqbal Shaikh</h1>
+      <p class="text-xl text-gray-700 dark:text-gray-300">Data Analyst • Data Enthusiast</p>
     </section>
 
     <!-- About Section -->
     <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6 text-blue-700">About Me</h2>
-      <p class="text-lg text-gray-700 leading-relaxed">
+      <h2 class="text-3xl font-semibold mb-6 text-blue-700 dark:text-blue-300">About Me</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300 leading-relaxed">
         I'm a passionate Data Analyst with a strong interest in uncovering insights from data and helping businesses make data-driven decisions.
       </p>
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-20 px-6 bg-blue-50">
+    <section id="skills" class="py-20 px-6 bg-blue-50 dark:bg-gray-800">
       <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-3xl font-semibold mb-6 text-blue-700">Skills</h2>
+        <h2 class="text-3xl font-semibold mb-6 text-blue-700 dark:text-blue-300">Skills</h2>
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-          <span class="bg-white py-2 px-4 rounded shadow">Python</span>
-          <span class="bg-white py-2 px-4 rounded shadow">SQL</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Excel</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Power BI</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Tableau</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Data Cleaning</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Visualization</span>
-          <span class="bg-white py-2 px-4 rounded shadow">Git/GitHub</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Python</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">SQL</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Excel</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Power BI</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Tableau</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Data Cleaning</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Visualization</span>
+          <span class="bg-white dark:bg-gray-700 py-2 px-4 rounded shadow">Git/GitHub</span>
         </div>
       </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="bg-white py-20 px-6">
+    <section id="projects" class="bg-white dark:bg-gray-900 py-20 px-6">
       <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-3xl font-semibold mb-10 text-blue-700">Projects</h2>
-        <div class="bg-blue-50 shadow-md hover:shadow-xl transition rounded-xl p-6 mb-4">
-          <h3 class="text-xl font-bold text-gray-800 mb-2">Blog Website</h3>
-          <p class="text-gray-600">A simple blog site created using modern web tools.</p>
+        <h2 class="text-3xl font-semibold mb-10 text-blue-700 dark:text-blue-300">Projects</h2>
+        <div class="bg-blue-50 dark:bg-gray-700 shadow-md hover:shadow-xl transition rounded-xl p-6 mb-4">
+          <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-2">Blog Website</h3>
+          <p class="text-gray-600 dark:text-gray-300">A simple blog site created using modern web tools.</p>
         </div>
       </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6 text-blue-700">Contact</h2>
-      <p class="mb-4 text-gray-700">Feel free to reach out or connect!</p>
-      <p class="text-blue-600 mb-4">
+      <h2 class="text-3xl font-semibold mb-6 text-blue-700 dark:text-blue-300">Contact</h2>
+      <p class="mb-4 text-gray-700 dark:text-gray-300">Feel free to reach out or connect!</p>
+      <p class="text-blue-600 dark:text-blue-400 mb-4">
         <i class="fas fa-envelope mr-2"></i>
         <a href="mailto:shaikhiqbal10062003@gmail.com" class="hover:underline">shaikhiqbal10062003@gmail.com</a>
       </p>
       <div class="flex justify-center space-x-6 text-2xl">
-        <a href="https://www.linkedin.com/in/iqbal-shaikh-5bb5702a9" target="_blank" class="text-blue-700 hover:text-blue-900">
+        <a href="https://www.linkedin.com/in/iqbal-shaikh-5bb5702a9" target="_blank" class="text-blue-700 dark:text-blue-400 hover:text-blue-900 dark:hover:text-white">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Iqbal-Shaikhh" target="_blank" class="text-gray-800 hover:text-black">
+        <a href="https://github.com/Iqbal-Shaikhh" target="_blank" class="text-gray-800 dark:text-white hover:text-black dark:hover:text-blue-300">
           <i class="fab fa-github"></i>
         </a>
       </div>
@@ -93,7 +106,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-white text-center py-4 border-t text-sm text-gray-500">
+  <footer class="bg-white dark:bg-gray-900 text-center py-4 border-t text-sm text-gray-500 dark:text-gray-400">
     © 2025 Iqbal Shaikh. All rights reserved.
   </footer>
 
