--- a/index.html
+++ b/index.html
@@ -49,13 +49,25 @@
       <p class="text-xl text-gray-700 dark:text-gray-300">Data Analyst • Data Enthusiast</p>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6 text-blue-700 dark:text-blue-300">About Me</h2>
-      <p class="text-lg text-gray-700 dark:text-gray-300 leading-relaxed">
-        I'm a passionate Data Analyst with a strong interest in uncovering insights from data and helping businesses make data-driven decisions.
+        <!-- About Section -->
+<section id="about" class="py-20 bg-gray-100 dark:bg-gray-800">
+  <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center">
+    
+    <!-- Profile Photo -->
+    <div class="w-48 h-48 mb-6 md:mb-0 md:mr-10 rounded-full overflow-hidden shadow-lg">
+      <img src="iqbal_photo.jpg" alt="Iqbal Shaikh" class="w-full h-full object-cover">
+    </div>
+
+    <!-- About Text -->
+    <div class="text-center md:text-left">
+      <h2 class="text-3xl font-bold mb-4 text-gray-900 dark:text-white">About Me</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        I'm Iqbal Shaikh, a Data Analyst and Data Enthusiast passionate about uncovering insights through data. I enjoy working on analytical projects and solving real-world problems using data-driven strategies.
       </p>
-    </section>
+    </div>
+  </div>
+</section>
+
 
     <!-- Skills Section -->
     <section id="skills" class="py-20 px-6 bg-blue-50 dark:bg-gray-800">
