--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         I'm Iqbal Shaikh, a Data Analyst and Data Enthusiast passionate about uncovering insights through data. I enjoy working on analytical projects and solving real-world problems using data-driven strategies.
       </p>
     </div>
+    <!-- Profile Photo with Glow -->
+    <div class="w-48 h-48 mb-6 md:mb-0 md:mr-10 rounded-full overflow-hidden shadow-xl border-4 border-blue-500 animate-pulse">
+        <img src="iqbal_photo.jpg" alt="Iqbal Shaikh" class="w-full h-full object-cover rounded-full">
+    </div>
   </div>
 </section>
 
