--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
   <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center">
     
     <!-- Profile Photo -->
-    <div class="w-48 h-48 mb-6 md:mb-0 md:mr-10 rounded-full overflow-hidden shadow-lg">
-      <img src="iqbal_photo.jpg" alt="Iqbal Shaikh" class="w-full h-full object-cover">
-    </div>
+<div class="w-48 h-48 mb-6 md:mb-0 md:mr-10 rounded-full overflow-hidden shadow-lg border-4 border-blue-500">
+  <img src="iqbal_photo.jpg" alt="Iqbal Shaikh" class="w-full h-full object-cover">
+</div>
+
 
     <!-- About Text -->
     <div class="text-center md:text-left">
