--- a/index.html
+++ b/index.html
@@ -89,15 +89,21 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="bg-white dark:bg-gray-900 py-20 px-6">
-      <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-3xl font-semibold mb-10 text-blue-700 dark:text-blue-300">Projects</h2>
-        <div class="bg-blue-50 dark:bg-gray-700 shadow-md hover:shadow-xl transition rounded-xl p-6 mb-4">
-          <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-2">Blog Website</h3>
-          <p class="text-gray-600 dark:text-gray-300">A simple blog site created using modern web tools.</p>
-        </div>
+<section id="projects" class="py-24 bg-gray-100 dark:bg-gray-800">
+  <div class="container mx-auto px-4 text-center">
+    <h2 class="text-3xl font-bold mb-6 text-gray-800 dark:text-white">Projects</h2>
+    
+    <div class="grid md:grid-cols-2 gap-8">
+      <!-- Blog Website Project -->
+      <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-md">
+        <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Blog Website</h3>
+        <p class="text-gray-600 dark:text-gray-300 mb-4">A simple blog site built using HTML, CSS, and JavaScript.</p>
+        <a href="blog-website/index.html" target="_blank" class="inline-block px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">View Project</a>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center">
